--- a/poedex.css
+++ b/poedex.css
@@ -4,7 +4,7 @@ body {
 
 #login {
 	position: fixed;
-	z-index: 9999;
+	z-index: 100;
 	left: 0;
 	right: 0;
 	bottom: 0;
@@ -16,6 +16,12 @@ body {
 	position: absolute;
 	width: 100%;
 	height: 100%;
+}
+
+#login-cancel {
+	position: absolute;
+	bottom: 24px;
+	right: 24px;
 }
 
 .icon {
