--- a/poedex.css
+++ b/poedex.css
@@ -2,6 +2,13 @@ body {
 	padding-top: 2px;
 }
 
+button:focus,
+.btn:focus,
+input:focus,
+textarea:focus {
+	outline: none !important;
+}
+
 #login {
 	position: fixed;
 	z-index: 100;
